--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -62,9 +64,9 @@
     height: 4px;
     bottom: 0;
     left: 0;
-    background-color: #f10b0b;
+    background-color: rgb(228, 152, 10);
     transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
+    transition: transform 0.5s ease-out;
   }
   
   .hover-underline-animation:hover::after {
@@ -78,67 +80,146 @@
     background-blend-mode: darken;
     color: aliceblue;
   }
-  .desc{
-    font-size: 3em;
+  .section1{
+   height: 100vh;
     display: flex;
     align-items: center;
-    padding: 35vh 20vh;
+    justify-content: center;
+    text-align: center;
   }
 
-  .desc span{
-    color: #f10b0b;
-  }
-  @media(max-width:500px){
-    .desc{
-        font-size: 1em;
-        padding: 15vh 10vh;
-
-    }
+ .hey{
+   font-size: 50px;
+   font-family: 'Bree Serif', serif;
+   font-weight: 600;
+   padding-bottom: 10px;
+   color: aliceblue;
+   
+ }
+ .name{
+   font-size: 50px;
+   font-weight: 900;
+   color: rgb(228, 152, 10);
+   
 }
+.dev{
+   font-size: 25px;
+   font-family: 'Bree Serif', serif;
+   font-weight: 600;
+   color: aliceblue;
+   padding-bottom: 25px;
+ }
+.dev {
+   position: relative;
+   overflow: hidden;
+   white-space: nowrap;
+   animation: typewriter 3s steps(38) 0.5s 1 normal both;
+ }
+ 
+ @keyframes typewriter {
+   from {
+     width: 0;
+   }
+   to {
+     width: 710px;
+   }
+ }
+
+
+ .button{
+   width: 150px;
+   height: 50px;
+   border-radius: 40px;
+   background-color: rgb(228, 152, 10);
+   border: none;
+   font-size: 17px;
+   font-family: 'Bree Serif', serif;
+   color: aliceblue;
+   font-weight: 600;
+ }
+ 
 .about{
     background-color: beige;
-    padding: 100px auto;
-    
-    
-
+    padding:50px
 }
  .about>h1{
     text-align: center;
     font-size: 3em;
  }
  .text{
-    width: 500px;
+    max-width: 400px;
     font-size: 20px;
     font-weight: bold;
     line-height: 2em;
-    padding-top: 50px;
  }
  .section2{
     display: flex;
     justify-content: space-evenly;
-    padding: 10vh 0vh;
     flex-wrap: wrap;
+    padding-top: 30px;
     
  }
  .skill{
-    width: 500px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    max-width: 400px;
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    flex-wrap: wrap;
     
  }
  .sicon>i{
-    font-size: 90px;
+    font-size: 100px;
+ }
+ .section3{
+    padding: 50px;
+    background-color: beige;
+    
+ }
+ .section3>h1{
+    text-align: center;
+    font-size: 3em;
  }
  .projects{
     display: flex;
     justify-content: space-evenly;
-    padding: 200px;
+    padding-top: 50px;
     flex-wrap: wrap;
  }
  .project{
-    width: 300px;
+    max-width: 400px;
  }
  .pimg{
     width: 100%;
  }
+ .section4{
+    padding: 50px;
+    background-color: beige;
+   
+ }
+ .section4>h1{
+    text-align: center;
+    font-size: 3em;
+ }
+ .contact{
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 50px;
+    align-items: center;
+    padding: 50px;
+ }
+ .form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 10px;
+    max-width: 500px;
+ }
+ .form>input{
+    height: 30px;
+ }
+ .socialicons{
+    font-size: 40px;
+ }
+   .footer{
+    text-align: center;
+   }
