--- a/style.css
+++ b/style.css
@@ -1,105 +1,199 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
-* {
+  @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Satisfy&display=swap');
+
+
+:root {
+   --navbar-bg-color: hsl(0, 0%, 15%);
+   --navbar-text-color: hsl(0, 0%, 85%);
+   --navbar-text-color-focus: white;
+   --navbar-bg-contrast: hsl(0, 0%, 25%);
+ }
+ * {
+   box-sizing: border-box;
    margin: 0;
    padding: 0;
-}
-
-.header {
-   width: 100%;
-   padding: 10px 0px;
-   background: rgba(0, 0, 0, 1);
-   display: flex;
-   justify-content: center;
-   align-items: center;
-
-}
-
-.container {
-   width: 80%;
+ }
+ body {
+   height: 100vh;
+   font-family: Arial, Helvetica, sans-serif;
+   line-height: 1.6;
+   background-color:  #1B1C1E;
+ }
+ .container {
+   max-width: 1000px;
+   padding-left: 1.4rem;
+   padding-right: 1.4rem;
+   margin-left: auto;
+   margin-right: auto;
+ }
+ #navbar {
+   --navbar-height: 64px;
+   position: fixed;
+   height: var(--navbar-height);
+   background-color: var(--navbar-bg-color);
+   left: 0;
+   right: 0;
+   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+ }
+ .navbar-container {
    display: flex;
    justify-content: space-between;
+   height: 100%;
    align-items: center;
-}
-
-
-
-.logo {
-   width: 100px;
-   height: 40px;
-
-}
-
-.logopart {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.items {
-   display: flex;
-   gap: 2vw;
-}
-
-.nav-item {
-   list-style: none;
-}
-
-.nav-link {
-   text-decoration: none;
-   color: aliceblue;
-   font-size: 1.3em;
-   font-weight: 700;
-   letter-spacing: 1px;
-
-}
-
-@media(max-width:500px) {
-   .nav-link {
-      font-size: 0.7em;
-
-   }
-
-}
-
-.hover-underline-animation {
-   display: inline-block;
-   position: relative;
-   color: aliceblue;
-}
-
-.hover-underline-animation::after {
-   content: '';
-   position: absolute;
+ }
+ .navbar-item {
+   margin: 0.4em;
    width: 100%;
-   transform: scaleX(0);
-   height: 4px;
-   bottom: 0;
-   left: 0;
-   background-color: rgb(228, 152, 10);
-   transform-origin: bottom right;
-   transition: transform 0.5s ease-out;
-}
+ }
+ 
+ .home-link,
+ .navbar-link {
+   color: var(--navbar-text-color);
+   text-decoration: none;
+   display: flex;
+   font-weight: 700;
+   align-items: center;
+ }
+ 
+ .home-link:is(:focus, :hover) {
+   color: var(--navbar-text-color-focus);
+ }
+ 
+ .navbar-link {
+   justify-content: center;
+   width: 100%;
+   padding: 0.4em 0.8em;
+   border-radius: 5px;
+ }
+ 
+ .navbar-link:is(:focus, :hover) {
+   color: var(--navbar-text-color-focus);
+   background-color: var(--navbar-bg-contrast);
+   border: 1px solid rgb(231, 134, 8);
+ }
+ .navbar-logo {
+   width: 80px;
+   height: 30px;
+   margin-right: 0.5em;
+   font-family: 'Satisfy', cursive;
+   color: rgb(228, 152, 10);
+   font-size: xx-large;
+  
+ }
 
-.hover-underline-animation:hover::after {
-   transform: scaleX(1);
-   transform-origin: bottom left;
-}
+ #navbar-toggle {
+   cursor: pointer;
+   border: none;
+   background-color: transparent;
+   width: 40px;
+   height: 40px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+ }
+ .icon-bar {
+   display: block;
+   width: 25px;
+   height: 4px;
+   margin: 2px;
+   background-color: var(--navbar-text-color);
+ }
+ #navbar-toggle:is(:focus, :hover) .icon-bar {
+   background-color: var(--navbar-text-color-focus);
+ }
+ #navbar-toggle[aria-expanded="true"] .icon-bar:is(:first-child, :last-child) {
+   position: absolute;
+   margin: 0;
+   width: 30px;
+ }
+ #navbar-toggle[aria-expanded="true"] .icon-bar:first-child {
+   transform: rotate(45deg);
+ }
+ #navbar-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+   opacity: 0;
+ }
+ #navbar-toggle[aria-expanded="true"] .icon-bar:last-child {
+   transform: rotate(-45deg);
+ }
+ #navbar-menu {
+   position: fixed;
+   top: var(--navbar-height);
+   bottom: 0;
+   opacity: 0;
+   visibility: hidden;
+   left: 0;
+   right: 0;
+ }
+ #navbar-toggle[aria-expanded="true"] + #navbar-menu {
+   background-color: rgba(0, 0, 0, 0.4);
+   opacity: 1;
+   visibility: visible;
+ }
+ .navbar-links {
+   list-style: none;
+   position: absolute;
+   background-color: var(--navbar-bg-color);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   left: 0;
+   right: 0;
+   margin: 1.4rem;
+   border-radius: 5px;
+   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+ }
+ 
+ #navbar-toggle[aria-expanded="true"] + #navbar-menu .navbar-links {
+   padding: 1em;
+ }
+ @media screen and (min-width: 700px) {
+   #navbar-toggle,
+   #navbar-toggle[aria-expanded="true"] {
+     display: none;
+   }
+ 
+   #navbar-menu,
+   #navbar-toggle[aria-expanded="true"] #navbar-menu {
+     visibility: visible;
+     opacity: 1;
+     position: static;
+     display: block;
+     height: 100%;
+   }
+ 
+   .navbar-links,
+   #navbar-toggle[aria-expanded="true"] #navbar-menu .navbar-links {
+     margin: 0;
+     padding: 0;
+     box-shadow: none;
+     position: static;
+     flex-direction: row;
+     width: 100%;
+     height: 100%;
+   }
+ }
+
 
 .home {
-   background: rgba(0, 0, 0, 0.9)url("./images/pexels-pixabay-276452.jpg");
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-blend-mode: darken;
+   /* background: #1B1C1E; */
    color: aliceblue;
 }
 
 .section1 {
    min-height: 100vh;
    display: flex;
+   flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
+}
+.profile{
+   width: 150px;
+   height: 150px;
+   border-radius: 50%;
+   border: 8px solid rgb(112, 70, 3);
 }
 
 .hey {
@@ -146,19 +240,25 @@
 
 
 .button {
-   width: 150px;
-   height: 50px;
+   padding: 15px;
    border-radius: 40px;
-   background-color: rgb(228, 152, 10);
-   border: none;
+   background-color: transparent;
+   border: 2px solid rgb(251, 199, 29);
+   
+}
+.button a{
+   text-decoration: none;
    font-size: 17px;
    font-family: 'Bree Serif', serif;
    color: aliceblue;
    font-weight: 600;
 }
+.button:hover{
+   transform: scale(1.05);
+}
 
 .section2 {
-   background-color: #1B1C1E;
+   /* background-color: #1B1C1E; */
    color: aliceblue;
    min-height: 100vh;
    display: flex;
@@ -220,7 +320,7 @@
 .section3 {
    min-height: 100vh;
    padding: 50px;
-   background-color: #1B1C1E;
+   /* background-color: #1B1C1E; */
    border-top: 2px solid gray;
    color: aliceblue;
    display: flex;
@@ -251,6 +351,34 @@
    border-bottom: 2px solid rgb(228, 152, 10);
    padding: 20px 0px 20px 0px;
 }
+.buttons{
+   display: flex;
+   gap: 50px;
+}
+
+.buttons a{
+   text-decoration: none;
+   color: aliceblue;
+   font-weight: 700;
+   
+}
+.preview-button{
+   padding: 12px;
+   border-radius: 5px;
+   background-color: transparent;
+   border: 2px solid rgb(88, 246, 88);
+  
+}
+.code-button{
+   padding: 12px;
+   border-radius: 5px;
+   background-color: transparent;
+   border: 2px solid rgb(251, 199, 29);
+}
+
+.preview-button:hover,.code-button:hover{
+   transform: scale(1.05);
+}
 
 .ptext{
    max-width: 500px;
@@ -269,6 +397,7 @@
 .pimg {
    max-width: 350px;
    height: 300px;
+   border: 8px solid rgb(112, 70, 3);
 }
 
 @media(max-width:500px) {
@@ -283,7 +412,7 @@
 .section4 {
    min-height: 60vh;
    padding: 50px;
-   background-color: #1B1C1E;
+   /* background-color: #1B1C1E; */
    border-top: 2px solid gray;
    color: aliceblue;
 
@@ -332,6 +461,14 @@
    font-size: 40px;
    display: flex;
    gap: 40px;
+}
+.socialicons a{
+   text-decoration: none;
+   color: aliceblue;
+}
+
+.socialicons a:hover{
+   transform: scale(1.08);
 }
 
 
